--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="withdraw_endavans">Withdraw Endavan$</string>
     <string name="endavans_to_withdraw">Endavans to withdraw</string>
     <string name="_0">0</string>
+    <string name="pay_debt">Pay Debt</string>
 </resources>
