--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,11 @@
     <string name="endavans_to_withdraw">Endavans to withdraw</string>
     <string name="_0">0</string>
     <string name="pay_debt">Pay Debt</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_global">Global</string>
+    <string name="title_play">Play</string>
+    <string name="tile_profile">Profile</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
