--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="create_game">Create game</string>
     <string name="join_game">Join Game</string>
+    <string name="display_name_hint">Display name</string>
 </resources>
