--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="pause_game">Pause game</string>
     <string name="leave">Leave</string>
     <string name="change_admin">Change admin</string>
+    <string name="editProfile">Edit profile</string>
 </resources>
