Complete Lifesaver functionality, improved interface!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,11 @@
     <string name="leave">Leave</string>
     <string name="change_admin">Change admin</string>
     <string name="editProfile">Edit profile</string>
+    <string name="use_life_saver">Use life saver</string>
+    <string name="use_lifesaver">Use Lifesaver</string>
+    <string name="use">Use</string>
+    <string name="buy">Buy</string>
+    <string name="pay">Pay</string>
+    <string name="deposit">Deposit</string>
+    <string name="withdraw">Withdraw</string>
 </resources>
