Refactor package names to downcase, global -> leaderboard

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="_0">0</string>
     <string name="pay_debt">Pay Debt</string>
     <string name="title_activity_main2">Main2Activity</string>
-    <string name="title_global">Global</string>
+    <string name="title_leaderboard">Leaderboard</string>
     <string name="title_play">Play</string>
     <string name="tile_profile">Profile</string>
 
